Formatting: fixes on demand queue sizing on smaller screens, mobile save search button no longer off screen in spanish

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -410,7 +410,7 @@ ul {
 }
 
 .saved-searches__filter-form-mobile .mat-form-field-infix {
-  width: 168px !important;
+  width: 143px !important;
 }
 
 .mat-button-toggle-label-content .mat-button-toggle-appearance-standard .scene-actions {
@@ -556,7 +556,7 @@ $d-height: 500px;
   resize: both;
   width: 80vw;
   height: 86vh;
-  min-width: 450px;
+  min-width: 360px;
   min-height: 600px;
 }
 
